finished incorporating basic bootstrap styling to app

--- a/chat/src/app/chat/chat.component.html
+++ b/chat/src/app/chat/chat.component.html
@@ -1,16 +1,16 @@
 <div class="container">
     <form>
         <div class="form-group">
-            <label for="messagecontent">New Message</label>
-            <input type="text" [(ngModel)]="messagecontent" name="messagecontent" id="messagecontent" class="form-control"/>
+            <label id="messagelabel" for="messagecontent">New Message:</label>
+            <input type="text" [(ngModel)]="messagecontent" name="messagecontent" id="messagecontent" class="form-control" autofocus/>
             </div>
             <div class="form-group">
-                <button (click)="chat(messagecontent)" class="btn btn-primary">Send Chat</button>
+                <button (click)="chat(messagecontent)" class="btn btn-dark btn-lg">Send Chat</button>
             </div>
     </form>
 
-    <h3>Chat Messages</h3>
-    <ul>
-        <li *ngFor="let message of messages">{{message}}</li>
+    <h4>Messages</h4>
+    <ul class="list-group list-group-flush">
+        <li *ngFor="let message of messages" class="list-group-item list-group-item-info">{{message}}</li>
     </ul>
 </div>
