--- a/chat/src/app/app.component.html
+++ b/chat/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div style="text-align:center">
+<div class="app" style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
 <router-outlet></router-outlet>
+</div>
